style(header): improve header design with styled logo and left alignment (#50)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="A simple, free and offline habit tracker application" />
     <meta name="theme-color" content="#4a90e2" />
     <title>Habit Tracker</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
